fix feature head layout bug

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -14,3 +14,9 @@
 .category{
   background-color: #efefef
 }
+
+.feature_cover{
+  width: 10;
+  height: 10;
+  background-color: #efefef;
+}
